<resources>
    <string name="app_name">Woof</string>
    <string name="bttn_login">Login</string>
    <string name="bttn_register">Register</string>
    <string name="bttn_looking_for_a_vet">Looking for a vet?</string>
    <string name="bttn_looking_for_a_new_dog">Woopedia</string>
    <string name="loginView">LOGIN</string>
    <string name="registerView">REGISTER</string>
    <string name="e_mail_address_ET">e-mail address</string>
    <string name="password_ET">password</string>
    <string name="passwordRE_ET">re-enter password</string>
    <string name="owner_name_ET">owner name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_dog">Add Dog</string>
    <string name="breed">breed</string>
    <string name="gender">gender</string>
    <string name="DOB">date of birth</string>
    <string name="name">name</string>
    <string name="weight">weight</string>
    <string name="create_dog_profile">CREATE DOG PROFILE</string>

    <string name="vaccinationtitle">VACCINATIONS</string>
    <string name="profile_menu">Profile</string>
    <string name="book_menu">Book</string>

    <string name="next_step">Register</string>
    <string name="health">Health</string>
    <string name="choose_a_photo">Choose a Photo</string>
    <string name="photo_title">Photo Title</string>
    <string name="upload_photo">Upload Photo</string>

    <string name="textView1">Learn about the</string>
    <string name="textView2">Dog Breeds you Love</string>
    <string name="title_groups">Dog Groups</string>
    <string name="groupName">Sporting</string>
    <string name="title_breeds">Dog Breeds</string>
    <string name="title">What Are Dog Groups?</string>
    <string name="details">The American Kennel Club places dog breeds into groups based on their particular set of uses, purposes, and characteristics. There are seven major dog groups: Working, Herding, Toy, Hound, Sporting, Non-Sporting, and Terrier. The Working Group features breeds that perform certain practical tasks, while the Hound Group features breeds that hunt. Other groups, such as the Toy Group, go by size, and the Non-Sporting group features dogs that don’t fit the characteristics and purposes of the other groups.</string>
    <string name="grp_details">Sample Details</string>


    <string name="search_vet">Search By Location</string>
    <string name="veterinarian_search">VETERINARIAN</string>


    <string name="editvaccinationtitle">EDIT VACCINATION DETAILS</string>
    <string name="vaccinationnewnumber">Vaccination Number</string>
    <string name="newvaccinationname">Vaccination Name</string>
    <string name="vaccinationnewduedate">Due Date</string>
    <string name="updatebuttontext">UPDATE</string>
    <string name="addvaccinationbuttontext">ADD</string>
    <string name="vaccinationaddtitle">ADD A NEW VACCINE</string>
    <string name="dogageid">Age</string>
    <string name="dogbreedid">Breed</string>
    <string name="doggenderid">Gender</string>
    <string name="dogweightid">Weight</string>
    <string name="colon1">:</string>
    <string name="colon2">:</string>
    <string name="colon3">:</string>
    <string name="colon4">:</string>
    <string name="vaccupdatebtn">UPDATE</string>
    <string name="vaccdeletebtn">DELETE</string>

    <string name="vaccinationupdatetitle">UPDATE VACCINATION</string>
    <string name="updatevacnum">Vaccination Number</string>
    <string name="updatevacname">Vaccination Name</string>
    <string name="updatevacdate">Vaccination Due Date</string>
    <string name="updatedetailsbutton">CONFIRM</string>

    <string name="doctor_name">Doctor name</string>
    <string name="address_doc">ADDRESS</string>
    <string name="contact_number">CONTACT NUMBER</string>
    <string name="rate_veterinarian">RATE VETERINARIAN</string>
    <string name="e_mail_vet">e-mail</string>
    <string name="e_mail_doc">E-mail</string>
    <string name="address_vetri">ADDRESS</string>
    <string name="phone_vetri">Phone</string>
    <string name="address_veterinarian">Address</string>
    <string name="veterinarian_name">Vet Name</string>

    <string name="logout">Logout</string>
    <string name="add_dog_menu">ADD DOG</string>


    <string name="textView">Know about the</string>
    <string name="title1">Major Dog Groups</string>
    <string name="search">Search for a Dog breed</string>



</resources>