<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vaccinationnewbackground__1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/updateheading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/vaccinationupdatetitle"
        android:textColor="#FF9017"
        android:textSize="33sp"
        android:gravity="center"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/vaccupdatenum"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/inputtext"
        android:hint="@string/updatevacnum"
        android:textColor="#581414" />

    <EditText
        android:id="@+id/updatevacname"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/inputtext"
        android:hint="@string/updatevacname"
        android:paddingLeft="15dp"
        android:textColor="#581414" />

    <EditText
        android:id="@+id/updatevacdate"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/inputtext"
        android:hint="@string/updatevacdate"
        android:paddingLeft="15dp"
        android:textColor="#581414" />

    <Button
        android:id="@+id/updateconbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/updatebutton"
        android:gravity="center"
        android:text="@string/updatedetailsbutton"
        android:textSize="20sp" />


</LinearLayout>