<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="@drawable/background_logo"
    tools:context=".DogDetailsPageOne">

    <LinearLayout
        android:id="@+id/card_viewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/textView1"
            android:textColor="@color/light_black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/textView2"
            android:textColor="@color/light_black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="360dp"
            android:layout_height="45dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/yellow">

            <TextView
                android:id="@+id/title_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_groups"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/title"
            android:textColor="@color/light_black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/details"
            android:textColor="@color/light_black"
            android:textSize="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_groups"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>