<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/addbf"
    android:layout_height="match_parent"
    tools:context=".AddNewVacc">

    <EditText
        android:id="@+id/vaccnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"

        android:ems="10"
        android:hint="@string/vaccinationnewnumber"
        android:inputType="textPersonName"
        android:background="@drawable/inputtext"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="#581414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/vaccname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/newvaccinationname"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="#581414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccnum"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/vaccdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/vaccinationnewduedate"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="#581414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccname"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/updatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/updatebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccdate"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/vaccinationaddtitle"
        android:textColor="#FF9017"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addbuttontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addvaccinationbuttontext"
        android:textColor="#581414"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/updatebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updatebutton" />

</androidx.constraintlayout.widget.ConstraintLayout>