<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addbf"
    tools:context=".edit_vaccine">

    <EditText
        android:id="@+id/editvaccinationname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/newvaccinationname"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="#581414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editvaccinationnumber" />

    <TextView
        android:id="@+id/textViewupdatebooktitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/editvaccinationtitle"
        android:textColor="#FF9017"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editvaccinationnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/vaccinationnewnumber"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="#581414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editvaccinationdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/vaccinationnewduedate"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="#581414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editvaccinationname" />

    <ImageButton
        android:id="@+id/vaccinationupdatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/updatebutton"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editvaccinationdate" />

    <TextView
        android:id="@+id/btnupdatesubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatebuttontext"
        android:textColor="#581414"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vaccinationupdatebutton"
        app:layout_constraintEnd_toEndOf="@+id/vaccinationupdatebutton"
        app:layout_constraintStart_toStartOf="@+id/vaccinationupdatebutton"
        app:layout_constraintTop_toTopOf="@+id/vaccinationupdatebutton" />

</androidx.constraintlayout.widget.ConstraintLayout>